--- a/jade_partials/account.html.jade
+++ b/jade_partials/account.html.jade
@@ -1,2 +1,2 @@
-ui-view.account_view
-.dimmer.main_dimmer(ng-click='toggleSidebar()', ng-if='sidebar_visible')
+ui-view.account_view.fade
+.dimmer.main_dimmer.hide_large(ng-click='toggleSidebar()', ng-if='sidebar_visible')
