--- a/jade_partials/campaign.html.jade
+++ b/jade_partials/campaign.html.jade
@@ -35,4 +35,4 @@ nav.campaign_nav.dropdown(ng-if='campaignNav_true', ng-click='toggleNavbar()')
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/contacts')
         | contacts
         i.icon-at
-ui-view.campaign_view
+ui-view.campaign_view.fade
