--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -17,4 +17,4 @@
     <li ng-hide="currentPage == &quot;/contacts&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts<i class="icon-at"></i></a></li>
   </ul>
 </nav>
-<ui-view class="campaign_view"></ui-view>
+<ui-view class="campaign_view fade"></ui-view>
