--- a/css/app.css
+++ b/css/app.css
@@ -86,6 +86,23 @@ dd:after {
   opacity:1;
 }
 
+.fade.ng-enter,
+.fade.ng-leave {
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.fade.ng-enter,
+.fade.ng-leave.ng-leave-active {
+  opacity:0;
+}
+.fade.ng-leave,
+.fade.ng-enter.ng-enter-active {
+  opacity:1;
+}
 
 /* @end */
 
@@ -151,10 +168,6 @@ dd:after {
 
 }
 
-.app_header ~ .scroller_wrapper {
-  
-}
-
 .scroller {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -172,7 +185,7 @@ dd:after {
 /* @group Header Stuff */
 
 .app_header {
-  position: relative;
+  position: absolute;
   background-color: #f8f9f8;
   width: 100%;
   height: 3em;
@@ -257,6 +270,8 @@ i.sup {
   -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   border-bottom: 1px solid #e2e3e1;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
+  
 }
 
 .dropdown.ng-enter,
@@ -472,11 +487,13 @@ header .btn {
 .slide_down.ng-leave.ng-leave-active {
   height: 0;
   opacity: 0;
+  top: -100%;
 }
 .slide_down.ng-leave,
 .slide_down.ng-enter.ng-enter-active {
   height: 7.5em;
   opacity: 1;
+  top: 0;
 }
 
 .personal_button {
@@ -565,10 +582,14 @@ nav {
   transform: translateY(0);
 }
 
+.tools_panel_wrapper {
+  z-index: ;
+}
+
 .tools_panel {
   position: absolute;
   top: 0;
-  z-index: 1000;
+  z-index: 800;
   height: 100%;
   width: 80%;
   right: -90%;
@@ -1353,8 +1374,14 @@ fieldset.padded {
   box-sizing: border-box;
   border: 1px solid #cacaca;
   border-radius: 3px;
-  box-shadow: 0 0 20px rgb(255, 255, 255);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.06);
+  
   z-index: 10;
+}
+
+.module header {
+  padding: 1em;
+  text-align: center;
 }
 
 .module .content_wrapper {
@@ -1466,6 +1493,10 @@ textarea {
   -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.main_dimmer {
+  z-index: 1000;
 }
 
 /* @end */
@@ -1740,10 +1771,6 @@ input.object-list-search:focus {
     -moz-transform: none;
     -webkit-transform: none;
     box-shadow: none;
-  }
-  
-  .dimmer.main_dimmer {
-    display: none;
   }
   
   .hide_large {
