--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -1,20 +1,18 @@
 
-<div ng-if="new_mode" class="module_wrapper fade">
-  <div ng-click="toggleNewMode()" class="module_fader"></div>
+<div ng-if="new_mode" class="module_wrapper zoom_fade">
+  <div ng-click="toggleNewMode()" class="module_fader dimmer"></div>
   <form ng-if="new_mode" ng-submit="createCampaign(new_campaign_title, handle_to_use, is_local, new_campaign_locale, discoverable)" class="module slide_down">
     <header>
       <h1>Create new campaign</h1>
-      <button class="soft btn push_right">duplicate</button>
-      <button type="button" ng-click="duplicate_mode = !duplicate_mode" ng-class="{selected: duplicate_mode}" class="btn">duplicate</button>
     </header>
     <div class="content_wrapper">
-      <label for="campaign_text">Name this campaign:</label>
-      <input id="campaign_text" type="text" name="new_campaign_title" placeholder="eg. 'Crepes &amp; Things Feedback'" ng-model="new_campaign_title"/><small>(this is the public title for your feedback.)</small>
+      <label for="campaign_text"></label>
+      <input id="campaign_text" type="text" name="new_campaign_title" placeholder="Campaign Title" ng-model="new_campaign_title"/>
       <div ng-if="duplicate_mode" class="duplicate">
         <label>or duplicate an existing campaign:</label>
         <select ng-model="campaign_to_duplicate" ng-options="campaign.id as campaign.title for campaign in campaignTitleList"></select>
       </div>
-      <label for="handle_to_use">Choose a handle to share this campaign from:</label>
+      <label for="handle_to_use">Choose a handle:</label>
       <select id="handle_to_use" ng-model="handle_to_use" ng-options="handle.id as handle.text for handle in handleList"></select>
     </div>
     <div ng-if="!duplicate_mode" class="btnset two_btns">
@@ -27,8 +25,8 @@
     </div>
   </form>
 </div>
-<header class="app_header">
-  <button ng-click="toggleSidebar('right')" class="btn icon left hide_large"><i class="icon-menu"></i></button>
+<header class="app_header"><a ng-class="{open : sidebar_visible}" ng-click="toggleSidebar('right')" class="left icon navicon-button larr">
+    <div class="navicon"></div></a>
   <h1 ng-bind="accountId" class="center"></h1>
   <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn right circled icon">+</button>
 </header>
