--- a/partials/panel.html
+++ b/partials/panel.html
@@ -1,42 +1,42 @@
 
-<header class="app_header">
-  <button ng-click="togglePanel()" class="btn icon left">cancel</button>
-  <button ng-show="panel=='Create Question'" ng-click="saveQuestion()" ui-event="{click : 'togglePanel()'}" class="btn icon right"><span ng-if="!editing_question">add question</span><span ng-if="editing_question">save changes</span></button>
+<header>
   <h1 ng-bind="panel" class="center"></h1>
 </header>
-<div class="scroller_wrapper">
-  <div class="scroller">
-    <div ng-show="panel=='Create Question'" class="card">
-      <h3>Choose Question Type:</h3>
-      <ul class="btnset five_btns">
-        <li ng-click="SelectQuestionType('binary', buildQuestion)" ng-class="{selected: buildQuestion.type == 'binary'}" class="btn">Yes/No</li>
-        <li ng-click="SelectQuestionType('rating', buildQuestion)" ng-class="{selected: buildQuestion.type == 'rating'}" class="btn">Rating</li>
-        <li ng-click="SelectQuestionType('freeText', buildQuestion)" ng-class="{selected: buildQuestion.type == 'freeText'}" class="btn">Text</li>
-        <li ng-click="SelectQuestionType('multipleChoice', buildQuestion)" ng-class="{selected: buildQuestion.type == 'multipleChoice'}" class="btn">Choice</li>
-        <li ng-click="SelectQuestionType('number', buildQuestion)" ng-class="{selected: buildQuestion.type == 'number'}" class="btn">Number</li>
-      </ul>
-      <input type="text" name="question_{{question.id}}" ng-model="buildQuestion.text" placeholder="Enter your question here."/>
-      <div class="options">
-        <div ng-show="buildQuestion.type == 'binary'"></div>
-        <div ng-show="buildQuestion.type == 'rating'"></div>
-        <div ng-show="buildQuestion.type == 'freeText'"></div>
-        <div ng-show="buildQuestion.type == 'multipleChoice'">
-          <input id="limit" type="checkbox" name="limit" class="inline"/>
-          <label for="limit" class="inline">Limit to one one response.</label>
-          <ul ng-show="buildQuestion.type == 'multipleChoice'" class="answers">
-            <li ng-repeat="answer in buildQuestion.answers">
-              <input type="text" ng-model="answer.text" placeholder="add an answer here."/>
-            </li>
-          </ul>
-          <button ng-click="addAnswer('',buildQuestion.answers)" class="btn">+ Answer</button>
-        </div>
+<div class="content_wrapper">
+  <div ng-show="panel=='Create Question'" class="card padded">
+    <h3>Choose Question Type:</h3>
+    <ul class="btnset five_btns options">
+      <li ng-click="SelectQuestionType('binary', buildQuestion)" ng-class="{selected: buildQuestion.type == 'binary'}" class="btn">Yes/No</li>
+      <li ng-click="SelectQuestionType('rating', buildQuestion)" ng-class="{selected: buildQuestion.type == 'rating'}" class="btn">Rating</li>
+      <li ng-click="SelectQuestionType('freeText', buildQuestion)" ng-class="{selected: buildQuestion.type == 'freeText'}" class="btn">Text</li>
+      <li ng-click="SelectQuestionType('multipleChoice', buildQuestion)" ng-class="{selected: buildQuestion.type == 'multipleChoice'}" class="btn">Choice</li>
+      <li ng-click="SelectQuestionType('number', buildQuestion)" ng-class="{selected: buildQuestion.type == 'number'}" class="btn">Number</li>
+    </ul>
+    <input type="text" name="question_{{question.id}}" ng-model="buildQuestion.text" placeholder="Enter your question here."/>
+    <div class="options">
+      <div ng-show="buildQuestion.type == 'binary'"></div>
+      <div ng-show="buildQuestion.type == 'rating'"></div>
+      <div ng-show="buildQuestion.type == 'freeText'"></div>
+      <div ng-show="buildQuestion.type == 'multipleChoice'">
+        <input id="limit" type="checkbox" name="limit" class="inline"/>
+        <label for="limit" class="inline">Limit to one one response.</label>
+        <ul ng-show="buildQuestion.type == 'multipleChoice'" class="answers">
+          <li ng-repeat="answer in buildQuestion.answers">
+            <input type="text" ng-model="answer.text" placeholder="add an answer here."/>
+          </li>
+        </ul>
+        <button ng-click="addAnswer('',buildQuestion.answers)" class="btn">+ Answer</button>
       </div>
     </div>
-    <div ng-show="panel=='share'">
-      <label for="share_email">Enter a friend's email to share your reward with them:</label>
-      <input type="email" name="share_email" placeholder="friend@email.com"/>
-      <button ng-click="togglePanel()" class="btn">send!</button>
-    </div>
-    <div ng-show="panel=='social_accounts'">This is where you would find a list of your connected social accounts.</div>
   </div>
+  <div ng-if="!duplicate_mode" class="btnset two_btns action">
+    <button ng-click="togglePanel()" type="button" class="btn">cancel</button>
+    <button type="submit" ng-show="panel=='Create Question'" ng-click="saveQuestion()" ui-event="{click : 'togglePanel()'}" class="btn positive"><span ng-if="!editing_question">add question</span><span ng-if="editing_question">save changes</span></button>
+  </div>
+  <div ng-show="panel=='share'">
+    <label for="share_email">Enter a friend's email to share your reward with them:</label>
+    <input type="email" name="share_email" placeholder="friend@email.com"/>
+    <button ng-click="togglePanel()" class="btn">send!</button>
+  </div>
+  <div ng-show="panel=='social_accounts'">This is where you would find a list of your connected social accounts.</div>
 </div>
